Use AGP v3.6.4 for Unity v2020.1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,6 @@ android {
         signingConfig signingConfigs.debug
     }
 
-    buildFeatures {
-        viewBinding true
-    }
-
-    dependenciesInfo {
-        includeInApk = false
-        includeInBundle = false
-    }
-
     signingConfigs {
         debug {
             storeFile file("$rootDir/debug.p12")
@@ -28,6 +19,10 @@ android {
 
     // workaround for IDE.
     sourceSets.debug.java.srcDirs += 'build/generated/data_binding_base_class_source_out/debug/out'
+
+    viewBinding {
+        enabled true
+    }
 }
 
 dependencies {
