Revert "Use AGP v3.6.4 for Unity v2020.1"
This reverts commit 1aab55e57abd4d0fffcbcbc3e6db057eddf342a1.

Conflicts:
	app/build.gradle

Unity v2019.4 generates gradle script that based on gradle v3.x.
That script does not have version specific code. so it can
upgrade to v4.x.

ref. https://docs.unity3d.com/2020.2/Documentation/Manual/android-gradle-overview.html

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,15 @@ android {
         signingConfig signingConfigs.debug
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
+    dependenciesInfo {
+        includeInApk = false
+        includeInBundle = false
+    }
+
     ndkVersion = '19.0.5232133'
 
     packagingOptions {
@@ -25,10 +34,6 @@ android {
 
     // workaround for IDE.
     sourceSets.debug.java.srcDirs += 'build/generated/data_binding_base_class_source_out/debug/out'
-
-    viewBinding {
-        enabled true
-    }
 }
 
 dependencies {
