Launch UnityPlayer via other activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ android {
 
 dependencies {
     implementation project(':unityLibrary')
+    implementation Depends.androidx.constraint
     implementation Depends.kotlin.stdlib
 }
