--- a/UnityProject/androidBuild/unityLibrary/build.gradle
+++ b/UnityProject/androidBuild/unityLibrary/build.gradle
@@ -26,5 +26,5 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
 }
